--- a/.github/workflows/laravel-tests.yml
+++ b/.github/workflows/laravel-tests.yml
@@ -24,7 +24,7 @@ jobs:
           php-version: 8.3
           extensions: mbstring, bcmath
 
-      # Step 3: Install dependencies
+      # Step 3: Install Composer dependencies
       - name: Install Composer dependencies
         run: composer install --no-progress --no-suggest
 
@@ -32,6 +32,16 @@ jobs:
       - name: Copy .env file
         run: cp .env.example .env
 
-      # Step 5: Run Laravel tests
+      # Step 5: Set up SQLite database
+      - name: Set up SQLite database
+        run: |
+          mkdir -p database
+          touch database/database.sqlite
+
+      # Step 6: Run migrations
+      - name: Run migrations
+        run: php artisan migrate --env=testing
+
+      # Step 7: Run Laravel tests
       - name: Run tests
         run: php artisan test
