--- a/.github/workflows/laravel-tests.yml
+++ b/.github/workflows/laravel-tests.yml
@@ -32,16 +32,20 @@ jobs:
       - name: Copy .env file
         run: cp .env.example .env
 
-      # Step 5: Set up SQLite database
+      # Step 5: Generate application key
+      - name: Generate app key
+        run: php artisan key:generate
+
+      # Step 6: Set up SQLite database
       - name: Set up SQLite database
         run: |
           mkdir -p database
           touch database/database.sqlite
 
-      # Step 6: Run migrations
+      # Step 7: Run migrations
       - name: Run migrations
         run: php artisan migrate --env=testing
 
-      # Step 7: Run Laravel tests
+      # Step 8: Run Laravel tests
       - name: Run tests
         run: php artisan test
